ajuste de class do p-news-scroll e adição de mais news

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-
+    <!-- HEADER -->
     <header id="header">
       <div class="maxWidth">
         <nav>
@@ -25,7 +25,9 @@
         </nav>
       </div>
     </header>
+    <!-- MAIN -->
     <main>
+      <!-- TITLE-->
       <div class="maxWidth" id="main-container">
         <div class="text">
           <h1 class="f4">
@@ -37,7 +39,7 @@
             outros assuntos relacionados.
           </h2>
         </div>
-  
+        <!-- BANNER -->
         <section class="container-news" >
           <article class="rigth-news">
             <div class="new-box" id="nw1" onclick="location.href='luta.html' ">
@@ -53,6 +55,7 @@
               </div>
             </div>
           </article>
+          <!-- NEWS-LEFT -->
           <article class="left-news">
             <div
               class="new-box box-left"
@@ -82,7 +85,9 @@
             </div>
           </article>
         </section>
+        <!-- NEWS-SCROLL -->
         <section class="container-news">
+          <!-- NEWS-SCROLL-RIGTH -->
           <article class="rigth-news news-scroll">
             <div class="box-scroll" id="scroll1">
               <div class="box-scroll-infos">
@@ -95,14 +100,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -118,14 +123,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -141,14 +146,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -164,14 +169,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -187,14 +192,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -210,14 +215,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -233,14 +238,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -256,14 +261,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -279,14 +284,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -302,14 +307,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -325,14 +330,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -348,14 +353,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -371,14 +376,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -394,14 +399,83 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-scroll" id="scroll1">
+              <div class="box-scroll-infos">
+                <div class="box-scroll-infos-img" id="nw1">
+                  <div class="new4"></div>
+                </div>
+                <div class="box-scroll-infos-texts">
+                  <h4 class="f6">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Nulla eros tellus, malesuada et velit in, blandit molestie
+                    dolor.
+                  </h4>
+                  <p class="p-news-scroll">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Nulla eros tellus, malesuada et velit in, blandit molestie
+                    dolor....
+                  </p>
+                  <span class="date">00/00/00</span>
+                  <div class="btn-new">
+                    <button class="btn-new-scroll">Lorem</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-scroll" id="scroll1">
+              <div class="box-scroll-infos">
+                <div class="box-scroll-infos-img" id="nw2">
+                  <div class="new4"></div>
+                </div>
+                <div class="box-scroll-infos-texts">
+                  <h4 class="f6">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Nulla eros tellus, malesuada et velit in, blandit molestie
+                    dolor.
+                  </h4>
+                  <p class="p-news-scroll">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Nulla eros tellus, malesuada et velit in, blandit molestie
+                    dolor....
+                  </p>
+                  <span class="date">00/00/00</span>
+                  <div class="btn-new">
+                    <button class="btn-new-scroll">Lorem</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-scroll" id="scroll1">
+              <div class="box-scroll-infos">
+                <div class="box-scroll-infos-img" id="nw3">
+                  <div class="new4"></div>
+                </div>
+                <div class="box-scroll-infos-texts">
+                  <h4 class="f6">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Nulla eros tellus, malesuada et velit in, blandit molestie
+                    dolor.
+                  </h4>
+                  <p class="p-news-scroll">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Nulla eros tellus, malesuada et velit in, blandit molestie
+                    dolor....
+                  </p>
+                  <span class="date">00/00/00</span>
+                  <div class="btn-new">
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -417,14 +491,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -440,14 +514,14 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
               </div>
@@ -463,53 +537,16 @@
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor.
                   </h4>
-                  <p>
+                  <p class="p-news-scroll">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nulla eros tellus, malesuada et velit in, blandit molestie
                     dolor....
                   </p>
                   <span class="date">00/00/00</span>
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <button class="btn-new-scroll">Lorem</button>
                   </div>
                 </div>
-              </div>
-            </div>
-          </article>
-          <article class="left-news">
-            <h1 id="h1-scroll-left">Lorem ipsum dolor</h1>
-            <div class="new-box box-left-scroll" id="nw9">
-              <div class="btn-new">
-                <button class="btn-new2">Lorem</button>
-              </div>
-              <div class="p-news">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-                  eros tellus, malesuada et velit in, blandit molestie dolor.
-                </p>
-              </div>
-            </div>
-
-            <div class="new-box box-left-scroll" id="nw10">
-              <div class="btn-new">
-                <button class="btn-new2">Lorem</button>
-              </div>
-              <div class="p-news">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-                  eros tellus, malesuada et velit in, blandit molestie dolor.
-                </p>
-              </div>
-            </div>
-            <div class="new-box box-left-scroll" id="nw11">
-              <div class="btn-new">
-                <button class="btn-new2">Lorem</button>
-              </div>
-              <div class="p-news">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-                  eros tellus, malesuada et velit in, blandit molestie dolor.
-                </p>
               </div>
             </div>
           </article>
