ajuste da class p-news-left

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -559,7 +559,7 @@
                 <button class="btn-new2">Lorem</button>
               </div>
               <div class="p-news">
-                <p>
+                <p class="p-news-left">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   eros tellus, malesuada et velit in, blandit molestie dolor.
                 </p>
@@ -571,7 +571,7 @@
                 <button class="btn-new2">Lorem</button>
               </div>
               <div class="p-news">
-                <p>
+                <p class="p-news-left">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   eros tellus, malesuada et velit in, blandit molestie dolor.
                 </p>
@@ -582,7 +582,7 @@
                 <button class="btn-new2">Lorem</button>
               </div>
               <div class="p-news">
-                <p>
+                <p class="p-news-left">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   eros tellus, malesuada et velit in, blandit molestie dolor.
                 </p>
