style: ajuste da  class p nas estruturas

--- a/src/pages/animes.html
+++ b/src/pages/animes.html
@@ -39,7 +39,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -47,7 +47,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -55,7 +55,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -63,7 +63,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -71,7 +71,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -79,7 +79,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -87,7 +87,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -95,7 +95,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -103,13 +103,20 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
                         </div>
-                    
-          
+                        <div class="recent-news-box-info">
+                            <div class="new-box box-left-scroll" id="nw19">
+                                <div class="p-news">
+                                    <p class="p-news-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                        malesuada et velit in, blandit molestie dolor.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </section>
         </div>
     </main>
