--- a/src/pages/error.html
+++ b/src/pages/error.html
@@ -27,7 +27,7 @@
         <section class="box-error">
           <div class="box-error-text">
             <h1>Tenho más notícias para você!</h1>
-            <p>
+            <p class="p-error">
               A página que você está procurando pode ter sido removida ou está
               temporariamente indisponível.
             </p>
@@ -35,7 +35,7 @@
           </div>
           <div class="box-error-img">
             <img src="http://localhost:3000/images/error.svg" alt="" />
-            <p>
+            <p class= "p-error">
               Ups! Você chegou no espaço... <br />
               volte para o mundo nerd!
             </p>
