--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,11 +15,11 @@
         <nav>
           <div id="logo">Naped</div>
           <ul class="nav-list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="series.html">Séries</a></li>
-            <li><a href="filmes.html">Filmes</a></li>
-            <li><a href="animes.html">Animes</a></li>
-            <li><a href="games.html">Games</a></li>
+            <li><a class="f7" href="index.html">Home</a></li>
+            <li><a class="f7" href="series.html">Séries</a></li>
+            <li><a class="f7" href="filmes.html">Filmes</a></li>
+            <li><a class="f7" href="animes.html">Animes</a></li>
+            <li><a class="f7" href="games.html">Games</a></li>
           </ul>
           <button id="btn-nav">Minha Conta</button>
         </nav>
