--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -48,7 +48,7 @@
               </div>
   
               <div class="p-news">
-                <p class="f2">
+                <p class=" p-news-banner f2">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   eros tellus, malesuada et velit in, blandit molestie dolor..
                 </p>
@@ -66,7 +66,7 @@
                 <button class="btn-new2">Lorem</button>
               </div>
               <div class="p-news">
-                <p class="f6">
+                <p class="p-news-left f6">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   eros tellus, malesuada et velit in, blandit molestie dolor.
                 </p>
@@ -77,7 +77,7 @@
                 <button class="btn-new2">Lorem</button>
               </div>
               <div class="p-news">
-                <p class="f6">
+                <p class="p-news-left f6">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                   eros tellus, malesuada et velit in, blandit molestie dolor.
                 </p>
@@ -601,7 +601,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p>
+                    <p class="p-news-scroll">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
@@ -615,7 +615,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p>
+                    <p class="p-news-scroll">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
@@ -629,7 +629,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p>
+                    <p class="p-news-scroll">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
@@ -643,7 +643,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p>
+                    <p class="p-news-scroll"> 
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
@@ -657,7 +657,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p>
+                    <p class="p-news-scroll">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
@@ -671,7 +671,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p>
+                    <p class="p-news-scroll">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
@@ -688,7 +688,7 @@
     <footer>
       <div class="maxWidth" id="main-footer">
         <div id="logo">Naped</div>
-        <p>
+        <p class="p-footer">
           Todas as imagens de filmes, séries e etc são marcas registradas dos
           seus respectivos proprietários.
         </p>
