styles: ajuste do tamanho dos p´s no home

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -601,7 +601,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p class="p-news-scroll">
+                    <p class="p-news-left">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
@@ -615,7 +615,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p class="p-news-scroll">
+                    <p class="p-news-left">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
@@ -629,7 +629,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p class="p-news-scroll">
+                    <p class="p-news-left">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
@@ -643,7 +643,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p class="p-news-scroll"> 
+                    <p class="p-news-left"> 
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
@@ -657,7 +657,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p class="p-news-scroll">
+                    <p class="p-news-left">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
@@ -671,7 +671,7 @@
                     <button class="btn-new2">Lorem</button>
                   </div>
                   <div class="p-news">
-                    <p class="p-news-scroll">
+                    <p class="p-news-left">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Nulla eros tellus, malesuada et velit in, blandit molestie
                       dolor.
