volta dos buttons

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -668,7 +668,7 @@
               <div class="recent-news-box-info">
                 <div class="new-box box-left-scroll" id="nw17">
                   <div class="btn-new">
-                    <button class="btn-new2">Lorem</button>
+                    <div class="btn-new2">Lorem</div>
                   </div>
                   <div class="p-news">
                     <p class="p-news-left">
