--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -30,11 +30,11 @@
       <div class="maxWidth" id="main-container">
          <!-- TITLE-->
         <div class="text">
-          <h1 >
+          <h1 class="h1-home">
             Mundo nerd? <br />
             Naped!
           </h1>
-          <h2 >
+          <h2 class="h2-home" >
             O Naped pode ser sua fonte de informações sobre o mundo nerd e
             outros assuntos relacionados.
           </h2>
