--- a/src/pages/luta.html
+++ b/src/pages/luta.html
@@ -28,9 +28,9 @@
             <section class="container-new">
                 <article class="container-new-info">
                     <div class="container-new-info-title">
-                        <h1 class="container-new-h1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis neque sed odio.</h1>
-                        <h2 class="container-new-h2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-                        <span>00 de Julho de 2021</span>
+                        <h1 class="h1-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis neque sed odio.</h1>
+                        <h2 class="h2-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+                        <span class="span-news">00 de Julho de 2021</span>
                     </div>
                     <div class="container-new-info-box" >
                        <div class="container-new-info-box-bg" id="nw1">
