--- a/src/pages/luta.html
+++ b/src/pages/luta.html
@@ -30,7 +30,7 @@
                     <div class="container-new-info-title">
                         <h1 class="h1-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis neque sed odio.</h1>
                         <h2 class="h2-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-                        <span class="span-news">00 de Julho de 2021</span>
+                        <span class="date-news">00 de Julho de 2021</span>
                     </div>
                     <div class="container-new-info-box" >
                        <div class="container-new-info-box-bg" id="nw1">
@@ -39,8 +39,8 @@
                         </div>
                        </div>
                        <div class="container-new-info-box-p">
-                        <p class="container-new-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in mauris vel dolor consectetur scelerisque quis eu eros. Morbi varius eu odio nec vehicula. Maecenas blandit nunc vitae enim fermentum, nec ullamcorper magna molestie. Fusce efficitur ipsum ullamcorper tellus pharetra, et vehicula enim feugiat. Sed scelerisque at orci rhoncus dapibus. Donec maximus porttitor mauris. Sed tempus felis sit amet gravida sagittis. Ut eleifend ornare leo et auctor.</p>
-                        <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in mauris vel dolor consectetur scelerisque quis eu eros. Morbi varius eu odio nec vehicula. Maecenas blandit nunc vitae enim fermentum, nec ullamcorper magna molestie. Fusce efficitur ipsum ullamcorper tellus pharetra, et vehicula enim feugiat. Sed scelerisque at orci rhoncus dapibus. Donec maximus porttitor mauris. Sed tempus felis sit amet gravida sagittis. Ut eleifend ornare leo et auctor.</p>
+                        <p class="p-news-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in mauris vel dolor consectetur scelerisque quis eu eros. Morbi varius eu odio nec vehicula. Maecenas blandit nunc vitae enim fermentum, nec ullamcorper magna molestie. Fusce efficitur ipsum ullamcorper tellus pharetra, et vehicula enim feugiat. Sed scelerisque at orci rhoncus dapibus. Donec maximus porttitor mauris. Sed tempus felis sit amet gravida sagittis. Ut eleifend ornare leo et auctor.</p>
+                        <p class="p-news-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in mauris vel dolor consectetur scelerisque quis eu eros. Morbi varius eu odio nec vehicula. Maecenas blandit nunc vitae enim fermentum, nec ullamcorper magna molestie. Fusce efficitur ipsum ullamcorper tellus pharetra, et vehicula enim feugiat. Sed scelerisque at orci rhoncus dapibus. Donec maximus porttitor mauris. Sed tempus felis sit amet gravida sagittis. Ut eleifend ornare leo et auctor.</p>
                     </div>
                 </div>
                 <div class="container-new-info-box" >
@@ -50,7 +50,7 @@
                      </div>
                     </div>
                     <div class="container-new-info-box-p">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in mauris vel dolor consectetur scelerisque quis eu eros. Morbi varius eu odio nec vehicula. Maecenas blandit nunc vitae enim fermentum, nec ullamcorper magna molestie. Fusce efficitur ipsum ullamcorper tellus pharetra, et vehicula enim feugiat. Sed scelerisque at orci rhoncus dapibus. Donec maximus porttitor mauris. Sed tempus felis sit amet gravida sagittis. Ut eleifend ornare leo et auctor.</p>
+                     <p class="p-news-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in mauris vel dolor consectetur scelerisque quis eu eros. Morbi varius eu odio nec vehicula. Maecenas blandit nunc vitae enim fermentum, nec ullamcorper magna molestie. Fusce efficitur ipsum ullamcorper tellus pharetra, et vehicula enim feugiat. Sed scelerisque at orci rhoncus dapibus. Donec maximus porttitor mauris. Sed tempus felis sit amet gravida sagittis. Ut eleifend ornare leo et auctor.</p>
                  </div>
              </div>
     
@@ -66,7 +66,7 @@
                                     <button class="btn-new2">Lorem</button>
                                 </div>
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -77,7 +77,7 @@
                                     <button class="btn-new2">Lorem</button>
                                 </div>
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p  class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -88,7 +88,7 @@
                                     <button class="btn-new2">Lorem</button>
                                 </div>
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -99,7 +99,7 @@
                                     <button class="btn-new2">Lorem</button>
                                 </div>
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p  class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -110,7 +110,7 @@
                                     <button class="btn-new2">Lorem</button>
                                 </div>
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p  class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -121,7 +121,7 @@
                                     <button class="btn-new2">Lorem</button>
                                 </div>
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p  class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
