style: ajuste na tipografia da pag error

--- a/src/pages/error.html
+++ b/src/pages/error.html
@@ -26,7 +26,7 @@
         </header>
         <section class="box-error">
           <div class="box-error-text">
-            <h1>Tenho más notícias para você!</h1>
+            <h1 class="h1-error">Tenho más notícias para você!</h1>
             <p class="p-error">
               A página que você está procurando pode ter sido removida ou está
               temporariamente indisponível.
