--- a/src/pages/luta.html
+++ b/src/pages/luta.html
@@ -57,7 +57,7 @@
         </article>
             </section>
             <section class="container-news">
-                <article class="recent-news">
+                <article class="recent-news new">
                     <h1 id="h1-scroll-left">Notícias mais recentes</h1>
                     <div class="recent-news-box">
                         <div class="recent-news-box-info">
@@ -136,7 +136,7 @@
     <footer>
         <div class="maxWidth" id="main-footer">
             <div id="logo">Naped</div>
-            <p>Todas as imagens de filmes, séries e etc são marcas registradas dos seus respectivos proprietários.</p>
+            <p class="p-footer">Todas as imagens de filmes, séries e etc são marcas registradas dos seus respectivos proprietários.</p>
         </div>
 
     </footer>
